# Enterprise_Workspace_Management_system

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
scripts/: build.py  diagnostics.py  run.py
src/: main.py
src/config/: settings.py
src/core/: logger.py
src/database/: connection.py
tests/: test_diagnostics.py  test_logger.py
