[Build system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-workspace-scaffoling"
version = "1.0.0"
description = "Enterprise Workspace Scaffolding for AI/ML Applications"
author = [
    {name = "Abhinav Kumar Singh" }
]
readme = "README.md"
requires-pyhton = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pyhton_files = ["test_*.py"]
